test/fails/ir/missfunc.ir.int
No function with the id "bar" exists.
